routes updated and superuser routes added for future use
